# rust-newsletter-app

./: .env  .gitignore  Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: audit.yml  ci.yml
.sqlx/: query-3ebb80d17ba6aa78b9545eda9b3cc75d3c8c59ccb033d517fd30a8c8a405044f.json  query-65c0e7fc219fa114e746442a19b424bfb1be1dccd123e8bf5d20cbdf795ef143.json
configuration/: base.yaml  production.yaml
migrations/: 20251207192159_make_status_not_null_in_subscriptions.sql  20251207193350_create_subscription_tokens_table.sql  20251223003832_modify_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
