[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Zasha Fachii Felix<zashafachii@gmail.com>"]

[lib] # If converting a binary crate to a library crate, specify the library file path here
path = "src/lib.rs" # Path to the library file. We default to the package.name if unspecified.

# We can only have one library in a project, but we can have multiple binaries.
# To add more binaries, create a `src/bin` directory and add files there.
# Each file in `src/bin` will be compiled as a separate binary.
[[bin]]
path = "src/main.rs" # Path to the binary file
name = "zero2prod" # Name of the binary

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.15.18"
uuid = { version = "1.4.2", features = ["v4"] }
chrono = "0.4.42"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] } # For setting up tracing subscribers
tracing-bunyan-formatter = "0.3" # For structured logging
tracing-log = "0.2" # For integrating tracing with the log crate

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls", # Use the Rustls TLS implementation with SQLx
    "macros", # Give us the ability to use the `query!` and `query_as!` macros
    "postgres", # Give us the Postgres specific functionality
    "uuid", # Support for the `uuid` crate
    "chrono", # Support for the `chrono` crate. Needed for date and time handling
    "migrate" # Support for database migrations
]

# Used exclusively for testing or when running examples. They do not get compiled into the final binary.
[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
